--- a/css3/c3.html
+++ b/css3/c3.html
@@ -14,9 +14,9 @@
 	<section>
 		<div class="test effect-bracket">
 			<a href="">olifer</a>
-			<a href="">121</a>
-			<a href="">摸金胖子</a>
-			<a href="">冯天奇</a>
+			<a href="">小丸子</a>
+			<a href="">然子</a>
+			<a href="">刘子然</a>
 		</div>
 	</section>
 	<h2>
@@ -24,10 +24,10 @@
 	</h2>
 	<section>
 		<div class="test effect-bottom-line">
-			<a href="">Six_Nine</a>
-			<a href="">阿呆是小无赖</a>
-			<a href="">摸金胖子</a>
-			<a href="">冯天奇</a>
+			<a href="">olifer</a>
+			<a href="">小丸子</a>
+			<a href="">然子</a>
+			<a href="">刘子然</a>
 		</div>
 	</section>
 	<h2>
@@ -35,10 +35,10 @@
 	</h2>
 	<section>
 		<div class="test effect-double-line">
-			<a href="">Six_Nine</a>
-			<a href="">阿呆是小无赖</a>
-			<a href="">摸金胖子</a>
-			<a href="">冯天奇</a>
+			<a href="">olifer</a>
+			<a href="">小丸子</a>
+			<a href="">然子</a>
+			<a href="">刘子然</a>
 		</div>
 	</section>
 	<h2>
@@ -46,10 +46,10 @@
 	</h2>
 	<section>
 		<div class="test effect-double-line-slight">
-			<a href="">Six_Nine</a>
-			<a href="">阿呆是小无赖</a>
-			<a href="">摸金胖子</a>
-			<a href="">冯天奇</a>
+			<a href="">olifer</a>
+			<a href="">小丸子</a>
+			<a href="">然子</a>
+			<a href="">刘子然</a>
 		</div>
 	</section>
 	<h2>
@@ -57,10 +57,10 @@
 	</h2>
 	<section>
 		<div class="test effect-scale-down">
-			<a href="" data-hover="Six_Nine">Six_Nine</a>
-			<a href="" data-hover="阿呆是小无赖">阿呆是小无赖</a>
-			<a href="" data-hover="摸金胖子">摸金胖子</a>
-			<a href="" data-hover="冯天奇">冯天奇</a>
+			<a href="" data-hover="Six_Nine">olifer</a>
+			<a href="" data-hover="阿呆是小无赖">小丸子</a>
+			<a href="" data-hover="摸金胖子">然子</a>
+			<a href="" data-hover="冯天奇">刘子然</a>
 		</div>
 	</section>
 	<h2>
@@ -68,10 +68,10 @@
 	</h2>
 	<section>
 		<div class="test effect-scale-up">
-			<a href="" data-hover="Six_Nine">Six_Nine</a>
-			<a href="" data-hover="阿呆是小无赖">阿呆是小无赖</a>
-			<a href="" data-hover="摸金胖子">摸金胖子</a>
-			<a href="" data-hover="冯天奇">冯天奇</a>
+			<a href="" data-hover="Six_Nine">olifer</a>
+			<a href="" data-hover="阿呆是小无赖">小丸子</a>
+			<a href="" data-hover="摸金胖子">然子</a>
+			<a href="" data-hover="冯天奇">刘子然</a>
 		</div>
 	</section>
 	<h2>
@@ -79,10 +79,10 @@
 	</h2>
 	<section>
 		<div class="test effect-fall-down">
-			<a href="" data-hover="Six_Nine">Six_Nine</a>
-			<a href="" data-hover="阿呆是小无赖">阿呆是小无赖</a>
-			<a href="" data-hover="摸金胖子">摸金胖子</a>
-			<a href="" data-hover="冯天奇">冯天奇</a>
+			<a href="" data-hover="Six_Nine">olifer</a>
+			<a href="" data-hover="阿呆是小无赖">小丸子</a>
+			<a href="" data-hover="摸金胖子">然子</a>
+			<a href="" data-hover="冯天奇">刘子然</a>
 		</div>
 	</section>
 	<h2>
@@ -90,9 +90,9 @@
 	</h2>
 	<section>
 		<div class="test effect-border-fall">
-			<a href="" data-hover="Six_Nine">Six_Nine</a>
-			<a href="" data-hover="阿呆是小无赖">阿呆是小无赖</a>
-			<a href="" data-hover="摸金胖子">摸金胖子</a>
+			<a href="" data-hover="Six_Nine">olifer</a>
+			<a href="" data-hover="阿呆是小无赖">小丸子</a>
+			<a href="" data-hover="摸金胖子">然子</a>
 			<a href="" data-hover="冯天奇">冯天奇</a>
 		</div>
 	</section>
@@ -101,10 +101,10 @@
 	</h2>
 	<section>
 		<div class="test effect-text-fill">
-			<a href="" data-hover="Six_Nine">Six_Nine</a>
-			<a href="" data-hover="阿呆是小无赖">阿呆是小无赖</a>
-			<a href="" data-hover="摸金胖子">摸金胖子</a>
-			<a href="" data-hover="冯天奇">冯天奇</a>
+			<a href="" data-hover="Six_Nine">olifer</a>
+			<a href="" data-hover="阿呆是小无赖">小丸子</a>
+			<a href="" data-hover="摸金胖子">然子</a>
+			<a href="" data-hover="冯天奇">刘子然</a>
 		</div>
 	</section>
 	<h2>
@@ -112,10 +112,10 @@
 	</h2>
 	<section>
 		<div class="test effect-push">
-			<a href="" data-hover="Six_Nine"><span>Six_Nine</span></a>
-			<a href="" data-hover="阿呆是小无赖"><span>阿呆是小无赖</span></a>
-			<a href="" data-hover="摸金胖子"><span>摸金胖子</span></a>
-			<a href="" data-hover="冯天奇"><span>冯天奇</span></a>
+			<a href="" data-hover="Six_Nine"><span>olifer</span></a>
+			<a href="" data-hover="阿呆是小无赖"><span>小丸子</span></a>
+			<a href="" data-hover="摸金胖子"><span>然子</span></a>
+			<a href="" data-hover="冯天奇"><span>刘子然</span></a>
 		</div>
 	</section>
 	<h2>
@@ -123,10 +123,10 @@
 	</h2>
 	<section>
 		<div class="test effect-slide">
-			<a href="" data-hover="Six_Nine"><span>Six_Nine</span></a>
-			<a href="" data-hover="阿呆是小无赖"><span>阿呆是小无赖</span></a>
-			<a href="" data-hover="摸金胖子"><span>摸金胖子</span></a>
-			<a href="" data-hover="冯天奇"><span>冯天奇</span></a>
+			<a href="" data-hover="Six_Nine"><span>olifer</span></a>
+			<a href="" data-hover="阿呆是小无赖"><span>小丸子</span></a>
+			<a href="" data-hover="摸金胖子"><span>然子</span></a>
+			<a href="" data-hover="冯天奇"><span>刘子然</span></a>
 		</div>
 	</section>
 	<h2>
@@ -134,10 +134,10 @@
 	</h2>
 	<section>
 		<div class="test effect-slide-3d">
-			<a href=""><span data-hover="Six_Nine">Six_Nine</span></a>
-			<a href=""><span data-hover="阿呆是小无赖">阿呆是小无赖</span></a>
-			<a href=""><span data-hover="摸金胖子">摸金胖子</span></a>
-			<a href=""><span data-hover="冯天奇">冯天奇</span></a>
+			<a href=""><span data-hover="Six_Nine">olifer</span></a>
+			<a href=""><span data-hover="阿呆是小无赖">小丸子</span></a>
+			<a href=""><span data-hover="摸金胖子">然子</span></a>
+			<a href=""><span data-hover="冯天奇">刘子然</span></a>
 		</div>
 	</section>
 	<h2>
@@ -145,10 +145,10 @@
 	</h2>
 	<section>
 		<div class="test effect-turn">
-			<a href=""><span data-hover="Six_Nine">Six_Nine</span></a>
-			<a href=""><span data-hover="阿呆是小无赖">阿呆是小无赖</span></a>
-			<a href=""><span data-hover="摸金胖子">摸金胖子</span></a>
-			<a href=""><span data-hover="冯天奇">冯天奇</span></a>
+			<a href=""><span data-hover="Six_Nine">olifer</span></a>
+			<a href=""><span data-hover="阿呆是小无赖">小丸子</span></a>
+			<a href=""><span data-hover="摸金胖子">然子</span></a>
+			<a href=""><span data-hover="冯天奇">刘子然</span></a>
 		</div>
 	</section>
 </body>
